update plot for 6a

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -760,8 +760,21 @@ We found intercation between Matchness and Valence (\(F(1.97, 45.20) = 20.45\), 
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp6a-BGLM-1.pdf}
-\caption{\label{fig:plot-exp6a-BGLM}Exp1b: Results of Bayesian GLM analysis.}
+\caption{\label{fig:plot-exp6a-BGLM}Exp6a: Results of Bayesian GLM analysis.}
 \end{figure}
+
+\hypertarget{hddm-4}{%
+\subsubsection{HDDM}\label{hddm-4}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp6a-HDDM-1.pdf}
+\caption{\label{fig:plot-exp6a-HDDM}exp6a: Results of HDDM.}
+\end{figure}
+
+We fitted our data with HDDM, using the response-coding (also see Hu et al., 2020). We estimated separate drift rate (\(v\)), non-decision time (\(T_{0}\)), and boundary separation (\(a\)) for each condition. We found that, similar to experiment 2, the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person, but only for the self-referential condition. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation, and this effect also exist only for the self-referential condition.
+
+Interestingly, we found that in both self-referential and other-referential conditions, the shapes associated bad valence have higher drift rate and higher boundary separation. which might suggest that the shape associated with bad stimuli might be prioritized in the non-match trials (see figure \ref{fig:plot-exp6a-HDDM}).
 
 \hypertarget{part-2-interaction-between-valence-and-identity}{%
 \section{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
@@ -850,8 +863,8 @@ We found that the \emph{d} prime is greater when shapes were associated with goo
 
 In reaction times, we found that same trends in the match trials as in the RT: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp3a-BGLM}
 
-\hypertarget{hddm-4}{%
-\subsubsection{HDDM}\label{hddm-4}}
+\hypertarget{hddm-5}{%
+\subsubsection{HDDM}\label{hddm-5}}
 
 \begin{figure}
 \centering
@@ -944,8 +957,8 @@ We found that the \emph{d} prime is greater when shapes were associated with goo
 
 In reaction times, we found that same trends in the match trials as in the RT: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp3b-BGLM}
 
-\hypertarget{hddm-5}{%
-\subsubsection{HDDM}\label{hddm-5}}
+\hypertarget{hddm-6}{%
+\subsubsection{HDDM}\label{hddm-6}}
 
 \begin{figure}
 \centering
@@ -1045,8 +1058,8 @@ We found that the \emph{d} prime is greater when shapes were associated with goo
 
 In reaction times, we found that same trends in the match trials as in the RT: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp6b-d1-BGLM}
 
-\hypertarget{hddm-6}{%
-\subsubsection{HDDM}\label{hddm-6}}
+\hypertarget{hddm-7}{%
+\subsubsection{HDDM}\label{hddm-7}}
 
 \begin{figure}
 \centering
@@ -1056,15 +1069,15 @@ In reaction times, we found that same trends in the match trials as in the RT: w
 
 We fitted our data with HDDM, using the response-coding (also see Hu et al., 2020). We estimated separate drift rate (\(v\)), non-decision time (\(T_{0}\)), and boundary separation (\(a\)) for each condition. We found that, similar to experiment 3a, the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person, but only for the self-referential condition. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation, and this effect also exist only for the self-referential condition.
 
-Interestingly, we found that in both self-referential and other-referential conditions, the shapes associated bad valence have higher drift rate and higher boundary separation. which might suggest that the shape associated with bad stimuli might be prioritized in the non-match trials (see figure \ref{fig:plot-exp6b-HDDM})).
+Interestingly, we found that in both self-referential and other-referential conditions, the shapes associated bad valence have higher drift rate and higher boundary separation. which might suggest that the shape associated with bad stimuli might be prioritized in the non-match trials (see figure \ref{fig:plot-exp6b-HDDM}).
 
 \hypertarget{part-3-implicit-binding-between-valence-and-identity}{%
 \section{Part 3: Implicit binding between valence and identity}\label{part-3-implicit-binding-between-valence-and-identity}}
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment.
 
-\hypertarget{experiment-4a}{%
-\subsection{Experiment 4a}\label{experiment-4a}}
+\hypertarget{experiment-4a-morality-as-task-irrelevant-variable}{%
+\subsection{Experiment 4a: Morality as task-irrelevant variable}\label{experiment-4a-morality-as-task-irrelevant-variable}}
 
 In part two (experiment 3a and 3b), participants learned the association between self and moral valence directly. In Experiment 4a, we examined whether the interaction between moral valence and identity occur even when one of the variable was irrelevant to the task. In experiment 4a, participants learnt associations between shapes and self/other labels, then made perceptual match judgments only about the self or other conditions labels and shapes (cf.~Sui et al. (2012)). However, we presented labels of different moral valence in the shapes, which means that the moral valence factor become task irrelevant. If the binding between moral good and self is intrinsic and automatic, then we will observe that facilitating effect of moral good for self conditions, but not for other conditions.
 
@@ -1148,8 +1161,8 @@ We found that the \emph{d} prime is greater when shapes were associated with goo
 
 In reaction times, we found that same trends in the match trials as in the RT: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp4a-BGLM}
 
-\hypertarget{hddm-7}{%
-\subsubsection{HDDM}\label{hddm-7}}
+\hypertarget{hddm-8}{%
+\subsubsection{HDDM}\label{hddm-8}}
 
 \begin{figure}
 \centering
@@ -1159,8 +1172,8 @@ In reaction times, we found that same trends in the match trials as in the RT: w
 
 We fitted our data with HDDM, using the response-coding (also see Hu et al., 2020). We estimated separate drift rate (\(v\)), non-decision time (\(T_{0}\)), and boundary separation (\(a\)) for each condition. We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see figure \ref{fig:plot-exp4a-HDDM})).
 
-\hypertarget{experiment-4b}{%
-\subsection{Experiment 4b}\label{experiment-4b}}
+\hypertarget{experiment-4b-morality-as-task-irrelevant-variable}{%
+\subsection{Experiment 4b: Morality as task-irrelevant variable}\label{experiment-4b-morality-as-task-irrelevant-variable}}
 
 In study 4b, we changed the role of valence and identity in task. In this experiment, participants learn the association between moral valence and the made perceptual match judgments to associations between different moral valence and shapes as in study 1-3. Different from experiment 1 \textasciitilde{} 3, we made put the labels of \enquote{self/other} in the shapes so that identity served as an task irrelevant variable. As in experiment 4b, we also hypothesized that the intrinsic binding between morally good and self will enhance the performance of good self condition, even identity is irrelevant to the task.
 
@@ -1244,8 +1257,8 @@ We found that the \emph{d} prime is greater when shapes were associated with goo
 
 In reaction times, we found that same trends in the match trials as in the RT: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp4b-BGLM}
 
-\hypertarget{hddm-8}{%
-\subsubsection{HDDM}\label{hddm-8}}
+\hypertarget{hddm-9}{%
+\subsubsection{HDDM}\label{hddm-9}}
 
 \begin{figure}
 \centering
