--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -681,7 +681,7 @@ We fitted our data with HDDM, using the response-coding (also see Hu et al., 202
 \hypertarget{discussion-1}{%
 \subsection{Discussion}\label{discussion-1}}
 
-In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valence association. Moreover, with a cross-task analysis, we didn't found evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
+In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valence association. Moreover, with a cross-task analysis, we did not find evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
 These findings suggested that the facilitation effect of positive moral valence is robust and not affected by task. This robust effect detected by the associative learning is unexpected.
 
 \hypertarget{experiment-6a-eeg-study-1}{%
@@ -1337,7 +1337,7 @@ In this experiment, the advantage of good-self condition can only be disentangle
 \caption{\label{fig:plot-exp5-effect}Effect size (Cohen's \emph{d}) of Valence in Exp5.}
 \end{figure}
 
-In this part, we analyzed the results from experiment 5, which included positive, neutral, and negative valence from four different domains: morality, emotion, aesthetics of human, and aesthetics of scene. We found interaction between valence and domain for both \emph{d} prime and RT (match trials). A common pattern appeared in all four domains: each domain showed a binary results instead of gradient on both \emph{d} prime and RT. For morality, aesthetics of human, and aesthetics of scene, the positive conditions had advantages over both neutral and negative conditions (greater \emph{d} prime and faster RT), and neutral and negative conditions didn't differ from each other. But for the emotional stimuli, it was the positive and neutral had advantage over negative conditions, while positive and neutral conditions were not significantly different. See supplementary materials for detailed statistics. Also note that the effect size in moral domain is smaller than the aesthetic domains (beauty of people and beauty of scene). See Figure \ref{fig:plot-exp5-effect}.
+In this part, we analyzed the results from experiment 5, which included positive, neutral, and negative valence from four different domains: morality, emotion, aesthetics of human, and aesthetics of scene. We found interaction between valence and domain for both \emph{d} prime and RT (match trials). A common pattern appeared in all four domains: each domain showed a binary results instead of gradient on both \emph{d} prime and RT. For morality, aesthetics of human, and aesthetics of scene, there was a positivity effect where the positive conditions had advantages over both neutral (greater \emph{d} prime and faster RT), while neutral and negative conditions didn't differ from each other. But for the emotional stimuli, there was a reversed negativity effect: positive and neutral conditions were not significantly different from each other but both had advantage over negative conditions. See supplementary materials for detailed statistics. Also note that the effect size in moral domain is smaller than the aesthetic domains (beauty of people and beauty of scene). See Figure \ref{fig:plot-exp5-effect}.
 
 \hypertarget{self-reported-personal-distance}{%
 \subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
